--- a/index.html
+++ b/index.html
@@ -1,132 +1,338 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TinDog</title>
 
-<head>
-  <meta charset="utf-8">
-  <title>TinDog</title>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
+    <!-- CSS Stylesheets -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
 
-<body>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700;900&family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
 
-  <section id="title">
+    <!-- JAVASCRIPT -->
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/54121ca3fa.js"
+      crossorigin="anonymous"
+    ></script>
 
-    <!-- Nav Bar -->
+    <!-- Bootstrap JQuery -->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
 
+    <!-- Bootstrap Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
 
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+      integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
+  <body>
+    <section class="colored-section" id="title">
+      <div class="container-fluid">
+        
+        <!-- Nav Bar -->
 
-    <!-- Title -->
+        <nav class="navbar navbar-expand-lg navbar-dark">
+          <a class="navbar-brand" href="">tindog</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-    <div>
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
-    </div>
-    <div>
-      <img src="images/iphone6.png" alt="iphone-mockup">
-    </div>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#footer">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#pricing">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#cta">Download</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
 
-  </section>
+        <!-- Title -->
 
+        <div class="row">
+          <div class="col-lg-6">
+            <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
+            <button class="btn btn-lg btn-dark download-button" type="button">
+              <i class="fab fa-apple"></i> iOS
+            </button>
+            <button
+              class="btn btn-lg btn-outline-light download-button"
+              type="button"
+            >
+              <i class="fab fa-google-play"></i> Android
+            </button>
+          </div>
 
-  <!-- Features -->
+          <div class="col-lg-6">
+            <img
+              class="title-image"
+              src="images/iphone6.png"
+              alt="iphone-mockup"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
 
-  <section id="features">
+    <!-- Features -->
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+    <section class="white-section" id="features">
+      <div class="container-fluid">
+        <div class="row text-center">
+          <div class="col-lg-4 feature-col">
+            <i class="fas fa-check-circle fa-4x feature-icon"></i>
+            <h3 class="feature-title">Easy to use.</h3>
+            <p class="description">
+              So easy to use, even your dog could do it.
+            </p>
+          </div>
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+          <div class="col-lg-4 feature-col">
+            <i class="fas fa-bullseye fa-4x feature-icon"></i>
+            <h3 class="feature-title">Elite Clientele</h3>
+            <p class="description">We have all the dogs, the greatest dogs.</p>
+          </div>
 
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+          <div class="col-lg-4 feature-col">
+            <i class="fas fa-heart fa-4x feature-icon"></i>
+            <h3 class="feature-title">Guaranteed to work.</h3>
+            <p class="description">
+              Find the love of your dog's life or your money back.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  </section>
+    <!-- Testimonials -->
 
+    <section class="colored-section" id="testimonials">
+      <div
+        class="text-center carousel slide"
+        data-ride="carousel"
+        data-pause="false"
+        id="testimonial-carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active container-fluid">
+            <h2 class="testimonial-heading">
+              "I no longer have to sniff other dogs for love. I've found the
+              hottest Corgi on TinDog. Woof!"
+            </h2>
+            <img
+              class="testimonial-img"
+              src="images/dog-img.jpg"
+              alt="dog-profile"
+            />
+            <em>Pebbles, New York</em>
+          </div>
 
-  <!-- Testimonials -->
+          <div class="carousel-item container-fluid">
+            <h2 class="testimonial-heading">
+              "My dog used to be so lonely, but with TinDog's help, they've
+              found the love of their life. I think."
+            </h2>
+            <img
+              class="testimonial-img"
+              src="images/lady-img.jpg"
+              alt="lady-profile"
+            />
+            <em>Beverly, Illinois</em>
+          </div>
+        </div>
+        <a
+          class="carousel-control-prev"
+          href="#testimonial-carousel"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#testimonial-carousel"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </section>
 
-  <section id="testimonials">
+    <!-- Press -->
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
+    <section class="text-center colored-section" id="press">
+      <img class="press-img" src="images/TechCrunch.png" alt="tc-logo" />
+      <img class="press-img" src="images/tnw.png" alt="tnw-logo" />
+      <img
+        class="press-img"
+        src="images/bizinsider.png"
+        alt="biz-insider-logo"
+      />
+      <img class="press-img" src="images/mashable.png" alt="mashable-logo" />
+    </section>
 
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+    <!-- Pricing -->
 
-  </section>
+    <section class="white-section" id="pricing">
+      <h2 class="pricing-heading">A Plan for Every Dog's Needs</h2>
+      <p>Simple and affordable price plans for you and your dog.</p>
 
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-lg-4 col-md-6 pricing-col">
+            <div class="card h-100">
+              <div class="card-header">
+                <h3>Chihuahua</h3>
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h2 class="pricing-heading">Free</h2>
+                <p>5 Matches Per Day</p>
+                <p>10 Messages Per Day</p>
+                <p>Unlimited App Usage</p>
+                <button
+                  class="btn btn-lg btn-outline-dark mt-auto"
+                  type="button"
+                >
+                  Sign Up
+                </button>
+              </div>
+            </div>
+          </div>
 
-  <!-- Press -->
+          <div class="col-lg-4 col-md-6 pricing-col">
+            <div class="card h-100">
+              <div class="card-header">
+                <h3>Labrador</h3>
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h2 class="pricing-heading">$49 / mo</h2>
+                <p>Unlimited Matches</p>
+                <p>Unlimited Messages</p>
+                <p>Unlimited App Usage</p>
+                <button class="btn btn-lg btn-dark mt-auto" type="button">
+                  Sign Up
+                </button>
+              </div>
+            </div>
+          </div>
 
-  <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+          <div class="col-lg-4 pricing-col">
+            <div class="card h-100">
+              <div class="card-header">
+                <h3>Mastiff</h3>
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h2 class="pricing-heading">$99 / mo</h2>
+                <p>Pirority Listing</p>
+                <p>Unlimited Matches</p>
+                <p>Unlimited Messages</p>
+                <p>Unlimited App Usage</p>
+                <button class="btn btn-lg btn-dark mt-auto" type="button">
+                  Sign Up
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  </section>
+    <!-- Call to Action -->
 
+    <section class="text-center colored-section" id="cta">
+      <div class="container-fluid">
+        <h2 class="big-heading">
+          Find the True Love of Your Dog's Life Today.
+        </h2>
+        <button class="btn btn-lg btn-dark download-button" type="button">
+          <i class="fab fa-apple"></i> iOS
+        </button>
+        <button
+          class="btn btn-lg btn-outline-light download-button"
+          type="button"
+        >
+          <i class="fab fa-google-play"></i> Android
+        </button>
+      </div>
+    </section>
 
-  <!-- Pricing -->
+    <!-- Footer -->
 
-  <section id="pricing">
-
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
-
-
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-  </section>
-
-
-  <!-- Call to Action -->
-
-  <section id="cta">
-
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-
-  </section>
-
-
-  <!-- Footer -->
-
-  <footer id="footer">
-
-    <p>© Copyright 2018 TinDog</p>
-
-  </footer>
-
-
-</body>
-
+    <footer class="text-center white-section" id="footer">
+      <a
+        href="https://twitter.com/"
+        class="fab fa-twitter social-icon"
+        target="_blank"
+        rel="noopener noreferrer"
+      ></a>
+      <a
+        href="https://facebook.com/"
+        class="fab fa-facebook-f social-icon"
+        target="_blank"
+        rel="noopener noreferrer"
+      ></a>
+      <a
+        href="https://instagram.com/"
+        class="fab fa-instagram social-icon"
+        target="_blank"
+        rel="noopener noreferrer"
+      ></a>
+      <a
+        href="mailto:"
+        class="fas fa-envelope social-icon"
+        target="_blank"
+        rel="noopener noreferrer"
+      ></a>
+      <p class="description">
+        ©<span id="copyright"
+          ><script>
+            $("#copyright").html(new Date().getFullYear());
+          </script></span
+        >
+        TinDog
+      </p>
+    </footer>
+  </body>
 </html>
